--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
-        "psr/http-message": "^1.0"
+        "php": ">=5.6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
