--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "getkozo/webrouter",
+    "name": "jasonlam604/Kozo-WebRouter",
     "description": "Simple Web Router",
     "license": "MIT",
-    "homepage": "http://www.getkozo.com",
+    "homepage": "https://github.com/jasonlam604/Kozo-WebRouter",
     "authors": [
         {
             "name": "Jason Lam",
